--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -17,7 +17,7 @@
         width: 30%;
     }
 
-    div#formulario {
+    div#form {
         float: right;
         width: 70%;
     }
@@ -33,13 +33,21 @@
     }
 
     div#imagem {
-        float: left;
+        float: right;
         height: 100%;
         width: 50%;
     }
 
-    div#formulario {
-        float: right;
+    div#form {
+        float: left;
         width: 50%;
+    }
+
+    div#form > h1 {
+        font-size: 2em;
+    }
+
+    div#form > p{
+        font-size: 1.2em;
     }
 }
