--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,6 +8,7 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
   
     }
 
@@ -30,6 +31,7 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     div#imagem {
@@ -48,6 +50,8 @@
     }
 
     div#form > p{
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
+
     }
 }
