--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,15 +29,15 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;/*tudo que estiver fora da borda vai ser escondido*/
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -62,4 +62,76 @@ div#form {
 
     div#form > p{
         font-size: 0.8em;
+    }
+
+    div.campo {
+        background-color: #5f2c82;
+        border: 1px solid #5f2c82;
+        display: block;
+        width: 100%;
+        height: 40px;
+        border-radius: 8px;
+        margin: 5px 0px;
+    }
+
+    div.campo > label {
+        display: none;
+    }
+
+    div.campo > I {
+        color: white;
+        font-size: 2em;
+        width: 40px;
+        padding: 5px;
+    }
+
+    div.campo > input {
+        background-color: #95faf7;
+        font-size: 1em;
+        height: 100%;
+        width: calc(100% - 44px);
+        border: none;
+        border-radius: 8px;
+        padding: 4px;
+        transform: translateY(-13px);
+    }
+
+    div.campo > input:focus-within { /*A caixa que está com o foco ou sendo iterajida/usada ganhará essas CSS*/
+        background-color: white;
+    }
+
+    form > input[type="submit"] {
+        display: block;
+        font-size: 1em;
+        width: 100%;
+        height: 40px;
+        color: white;
+        background-color: #49a09d;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    form > input[type="submit"]:hover {
+        background-color: #2d6462;
+    }
+
+    form > a.botao {
+        display: block;
+        text-align: center;
+        width: 100%;
+        height: 40px;
+        padding-top: 5px;
+        margin-top: 5px;
+        font-size: 1em;
+        background-color: white;
+        color: #2d6462;
+        border: 1px solid #49a09d;
+        border-radius: 7px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    form > a.botao:hover {
+        background-color: #6cd3cf;
     }
